--- a/PaginaPrin/src/app/app.component.html
+++ b/PaginaPrin/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<app-carousel></app-carousel>
 <app-header></app-header>
 <app-about></app-about>
 <app-product></app-product>
@@ -6,3 +7,4 @@
 <app-review></app-review>
 <app-blog></app-blog>
 <app-footer></app-footer>
+
