--- a/PaginaPrin/src/app/@components/product/product.component.html
+++ b/PaginaPrin/src/app/@components/product/product.component.html
@@ -4,129 +4,29 @@
         <div class="row d-flex justify-content-center">
             <div class="menu-content pb-60 col-lg-10">
                 <div class="title text-center">
-                    <h1 class="mb-10">What kind of Coffee we serve for you</h1>
+                    <h1 class="mb-10">Donde encontrar nuestros productos</h1>
                     <p>Who are in extremely love with eco friendly system.</p>
                 </div>
             </div>
         </div>						
-        <div class="row">
-            <div class="col-lg-4">
+        <div class="row" >
+            <div class="col-lg-4" *ngFor="let pventa of pventas | paginate: { itemsPerPage: 6, currentPage: pageActual, totalItems: tamanTotal }">
                 <div class="single-menu">
                     <div class="title-div justify-content-between d-flex">
-                        <h4>Cappuccino</h4>
-                        <p class="price float-right">
-                            $49
-                        </p>
+                        <h4>{{pventa.nombrePventa}}</h4>
+                        <!--<p class="price float-right">
+                            $50
+                        </p>-->
                     </div>
                     <p>
-                        Usage of the Internet is becoming more common due to rapid advance.
+                        {{pventa.direccionPventa}}
                     </p>								
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div class="single-menu">
-                    <div class="title-div justify-content-between d-flex">
-                        <h4>Americano</h4>
-                        <p class="price float-right">
-                            $49
-                        </p>
-                    </div>
-                    <p>
-                        Usage of the Internet is becoming more common due to rapid advance.
-                    </p>								
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="single-menu">
-                    <div class="title-div justify-content-between d-flex">
-                        <h4>Espresso</h4>
-                        <p class="price float-right">
-                            $49
-                        </p>
-                    </div>
-                    <p>
-                        Usage of the Internet is becoming more common due to rapid advance.
-                    </p>								
-                </div>
-            </div>	
-            <div class="col-lg-4">
-                <div class="single-menu">
-                    <div class="title-div justify-content-between d-flex">
-                        <h4>Macchiato</h4>
-                        <p class="price float-right">
-                            $49
-                        </p>
-                    </div>
-                    <p>
-                        Usage of the Internet is becoming more common due to rapid advance.
-                    </p>								
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="single-menu">
-                    <div class="title-div justify-content-between d-flex">
-                        <h4>Mocha</h4>
-                        <p class="price float-right">
-                            $49
-                        </p>
-                    </div>
-                    <p>
-                        Usage of the Internet is becoming more common due to rapid advance.
-                    </p>								
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="single-menu">
-                    <div class="title-div justify-content-between d-flex">
-                        <h4>Coffee Latte</h4>
-                        <p class="price float-right">
-                            $49
-                        </p>
-                    </div>
-                    <p>
-                        Usage of the Internet is becoming more common due to rapid advance.
-                    </p>								
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="single-menu">
-                    <div class="title-div justify-content-between d-flex">
-                        <h4>Piccolo Latte</h4>
-                        <p class="price float-right">
-                            $49
-                        </p>
-                    </div>
-                    <p>
-                        Usage of the Internet is becoming more common due to rapid advance.
-                    </p>								
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="single-menu">
-                    <div class="title-div justify-content-between d-flex">
-                        <h4>Ristretto</h4>
-                        <p class="price float-right">
-                            $49
-                        </p>
-                    </div>
-                    <p>
-                        Usage of the Internet is becoming more common due to rapid advance.
-                    </p>								
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="single-menu">
-                    <div class="title-div justify-content-between d-flex">
-                        <h4>Affogato</h4>
-                        <p class="price float-right">
-                            $49
-                        </p>
-                    </div>
-                    <p>
-                        Usage of the Internet is becoming more common due to rapid advance.
-                    </p>								
-                </div>
-            </div>															
+            <div>
+                <pagination-controls class="my-pagination text-center" (pageChange)="pageActual = $event" previousLabel="Anterior"
+                nextLabel="Siguiente"></pagination-controls>				
+            </div>            
         </div>
     </div>	
 </section>
