--- a/PaginaPrin/src/app/@components/carousel/carousel.component.html
+++ b/PaginaPrin/src/app/@components/carousel/carousel.component.html
@@ -1,5 +1,5 @@
 <div class= "carusel-it">
-<ngb-carousel #carousel [interval]="3000" [pauseOnHover]="pauseOnHover" [pauseOnFocus]="pauseOnFocus" (slide)="onSlide($event)">
+<ngb-carousel class="carousel-dark" #carousel [interval]="3000" [pauseOnHover]="pauseOnHover" [pauseOnFocus]="pauseOnFocus" (slide)="onSlide($event)">
     <ng-template *ngFor= "let  imagec of imagenescar"  ngbSlide>
       <div class="picsum-img-wrapper">
         <img class= "imagen-em" src="{{imagec.img}}" alt="Random first slide">
