--- a/PaginaPrin/src/app/@components/about/about.component.html
+++ b/PaginaPrin/src/app/@components/about/about.component.html
@@ -4,17 +4,19 @@
         <div class="row justify-content-start align-items-center">
             <div class="col-lg-6 video-right justify-content-center align-items-center d-flex">
                 <div class="overlay overlay-bg"></div>
-                <a class="play-btn" href="https://www.youtube.com/watch?v=ARA0AxrnHdM"><img class="img-fluid" src="assets/img/play-icon.png" alt=""></a>
+                <img class="img-fluid" src="assets/img/Funda-tres.png" alt="Funda-tres">
             </div>						
             <div class="col-lg-6 video-left">
-                <h6>Live Coffee making process.</h6>
-                <h1>We Telecast our <br>
-                Coffee Making Live</h1>
-                <p><span>We are here to listen from you deliver exellence</span></p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
+                <h1>Productos SAN</h1>
+                <h6>Una dulce tradición</h6><br>
+                <!--<p><span>We are here to listen from you deliver exellence</span></p>-->
+                <p class="text-justify" id="historia">
+                    Fundada en 1985 por el Sr.José Ignacion Amboya padre del actual propietario, en el año 1995 se crea como microempresa, 
+                    contratando como trabajadores al Sr. Juan Amboya y Samuel Amboya. <br>
+                    En año 2010 el Sr. Abran Amboya trasfiere derechos del negocio al Sr. Samuel Amboya, en la actualidad cuentan con tres 
+                    productos: pan de sal, de dulce integral y los mojicones “Dulce Sabor”, que son distribuidos en diferentes supermercados en la ciudad de Riobamba. 
                 </p>
-                <img class="img-fluid" src="assets/img/signature.png" alt="">
+                <!--img class="img-fluid" src="assets/img/signature.png" alt="">--> 
             </div>
         </div>
     </div>	
