--- a/PaginaPrin/src/app/@components/gallery/gallery.component.html
+++ b/PaginaPrin/src/app/@components/gallery/gallery.component.html
@@ -4,33 +4,36 @@
             <div class="row d-flex justify-content-center">
                 <div class="menu-content pb-60 col-lg-10">
                     <div class="title text-center">
-                        <h1 class="mb-10">What kind of Coffee we serve for you</h1>
-                        <p>Who are in extremely love with eco friendly system.</p>
+                        <h1 class="mb-10">Nuestros productos con el inigualable<br>
+                            sabor artesanal</h1><br>
+                        <p id="leyenda-galeria">Somos una microempresa que elabora y distribuye productos saludables y de calidad,
+                            con el tradicional sabor artesanal, satisfaciendo el paladar de nuestros clientes.
+                        </p>
                     </div>
                 </div>
             </div>						
             <div class="row">
                 <div class="col-lg-4">
-                    <a href="assets/img/g1.jpg" class="img-pop-home">
-                        <img class="img-fluid" src="assets/img/g1.jpg" alt="">
+                    <a href="assets/img/carton-mojicones.jpg" class="img-pop-home">
+                        <img class="img-fluid" src="assets/img/carton-mojicones.jpg" alt="Plato mojicones">
                     </a>	
-                    <a href="assets/img/g2.jpg" class="img-pop-home">
-                        <img class="img-fluid" src="assets/img/g2.jpg" alt="">
+                    <a href="assets/img/Mojicones-h.jpg" class="img-pop-home">
+                        <img class="img-fluid" src="assets/img/Mojicones-h.jpg" alt="Mojicones">
                     </a>	
                 </div>
                 <div class="col-lg-8">
-                    <a href="assets/img/g3.jpg" class="img-pop-home">
-                        <img class="img-fluid" src="assets/img/g3.jpg" alt="">
+                    <a href="assets/img/panaderos.jpg" class="img-pop-home">
+                        <img class="img-fluid" src="assets/img/panaderos.jpg" alt="Panaderos">
                     </a>	
                     <div class="row">
                         <div class="col-lg-6">
-                            <a href="assets/img/g4.jpg" class="img-pop-home">
-                                <img class="img-fluid" src="assets/img/g4.jpg" alt="">
+                            <a href="assets/img/funda-mojicon.jpg" class="img-pop-home">
+                                <img class="img-fluid" src="assets/img/funda-mojicon.jpg" alt="Funda mojicon">
                             </a>	
                         </div>
                         <div class="col-lg-6">
-                            <a href="assets/img/g5.jpg" class="img-pop-home">
-                                <img class="img-fluid" src="assets/img/g5.jpg" alt="">
+                            <a href="assets/img/mojicones.jpg" class="img-pop-home">
+                                <img class="img-fluid" src="assets/img/mojicones.jpg" alt="mojicones">
                             </a>	
                         </div>
                     </div>
