--- a/PaginaPrin/src/app/@components/carousel/carousel.component.css
+++ b/PaginaPrin/src/app/@components/carousel/carousel.component.css
@@ -1,13 +1,11 @@
 .imagen-em
 {
-    width: 56%;
-    padding-left: 5%;
-    margin-top: 5%;
-    margin-left: 20%;
-    margin-right: 20%;
+    width: 1320px;
+    height: 575px;
+    margin-top: 3.5%;
 }
 .carusel-it
 {
-    background-color: #9b9994;
+    background-color: #ffffff;
 }
 
