--- a/PaginaPrin/src/app/@components/navbar/navbar.component.html
+++ b/PaginaPrin/src/app/@components/navbar/navbar.component.html
@@ -47,10 +47,9 @@
   <!-- Navbar  -->
   <nav class="navbar fixed-top navbar-expand-lg  navbar-dark p-md-3" style="height: 50px;">
     <div id="logo">
-      <a href="index.html"><img src="assets/img/logo.png" alt="" title="" /></a>
+      <a href="index.html"><img src="assets/img/logo2.png" alt="Logo" title="" /></a>
     </div>
     <div class="container">
-      <a class="navbar-brand" href="#">Web Zone</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -67,19 +66,22 @@
         <div class="mx-auto"></div>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white" href="#home">Home</a>
+            <a class="nav-link text-white" href="#inicio">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#about">About</a>
+            <a class="nav-link text-white" href="#about">Acerca de</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#blog">Blog</a>
+            <a class="nav-link text-white" href="#puntos">Puntos de Venta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Pricing</a>
+            <a class="nav-link text-white" href="#gallery">Galeria</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Contact</a>
+            <a class="nav-link text-white" href="#empresa">Nuestra Empresa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#footer">Contactanos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="http://localhost:4100/login">Acceder</a>
