--- a/PaginaPrin/src/app/@components/product/product.component.html
+++ b/PaginaPrin/src/app/@components/product/product.component.html
@@ -1,11 +1,10 @@
 <!-- Start menu Area -->
-<section class="menu-area section-gap" id="coffee">
+<section class="menu-area section-gap" id="puntos">
     <div class="container">
         <div class="row d-flex justify-content-center">
             <div class="menu-content pb-60 col-lg-10">
                 <div class="title text-center">
                     <h1 class="mb-10">Donde encontrar nuestros productos</h1>
-                    <p>Who are in extremely love with eco friendly system.</p>
                 </div>
             </div>
         </div>						
