--- a/PaginaPrin/src/app/@components/review/review.component.html
+++ b/PaginaPrin/src/app/@components/review/review.component.html
@@ -1,17 +1,18 @@
 <!-- Start review Area -->
-<section class="review-area section-gap" id="review">
+<section class="review-area section-gap" id="empresa">
     <div class="container">
         <div class="row d-flex justify-content-center">
-            <div class="menu-content pb-60 col-lg-10">
+            <div class="menu-content pb-20 col-lg-10">
                 <div class="title text-center">
-                    <h1 class="mb-10">What kind of Coffee we serve for you</h1>
-                    <p>Who are in extremely love with eco friendly system.</p>
+                    <h1 class="mb-10">Nuestra Empresa</h1>
+                    <p id="mision-vision">Estamos creciendo mirando hacia el futuro, 
+                        siempre pensando en la calidad de nuestros productos que ofertamos gracias a nuestra tradición y experiencia.</p>
                 </div>
             </div>
         </div>						
         <div class="row">
-            <div class="col-lg-6 col-md-6 single-review">
-                <img src="assets/img/r1.png" alt="">
+            <div class="col-lg-4 col-md-4 single-review">
+                <!--<img src="assets/img/r1.png" alt="">
                 <div class="title d-flex flex-row">
                     <h4>lorem ipusm</h4>
                     <div class="star">
@@ -24,10 +25,11 @@
                 </div>
                 <p>
                     Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-                </p>
+                </p>-->
+                <img class="img-fluid" src="assets/img/mision.png" alt="Mision">
             </div>	
-            <div class="col-lg-6 col-md-6 single-review">
-                <img src="assets/img/r2.png" alt="">
+            <div class="col-lg-4 col-md-4 single-review">
+                <!--<img src="assets/img/r2.png" alt="">
                 <div class="title d-flex flex-row">
                     <h4>lorem ipusm</h4>
                     <div class="star">
@@ -40,26 +42,13 @@
                 </div>
                 <p>
                     Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-                </p>
-            </div>	
-        </div>
-        <div class="row counter-row">
-            <div class="col-lg-3 col-md-6 single-counter">
-                <h1 class="counter">2536</h1>
-                <p>Happy Client</p>
+                </p>-->
+                
+                 <img class="img-fluid" src="assets/img/vision.png">
             </div>
-            <div class="col-lg-3 col-md-6 single-counter">
-                <h1 class="counter">7562</h1>
-                <p>Total Projects</p>
+            <div class="col-lg-4 col-md-4 single-review">
+                <img class="img-fluid" src="assets/img/valores.png">
             </div>
-            <div class="col-lg-3 col-md-6 single-counter">
-                <h1 class="counter">2013</h1>
-                <p>Cups Coffee</p>
-            </div>
-            <div class="col-lg-3 col-md-6 single-counter">
-                <h1 class="counter">10536</h1>
-                <p>Total Submitted</p>
-            </div>																		
         </div>
     </div>	
 </section>
