--- a/PaginaPrin/src/app/@components/footer/footer.component.html
+++ b/PaginaPrin/src/app/@components/footer/footer.component.html
@@ -1,14 +1,13 @@
-<!-- start footer Area -->		
 <footer class="footer-area section-gap" id="footer">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-6">
                 <div class="single-footer-widget">
                     <h6>Sobre Nosotros</h6>
-                    <p>
+                    <h6>
                         Disfruta de unos deliciosos Mojicones "Dulce Sabor" y compartelos en familia.
-                    </p>
-                    <br>
+                    </h6>
+                    
                     <div class="row">
                         
                         <h6>Realiza tus pedidos a los numeros:</h6>
@@ -16,7 +15,7 @@
                             <i class="fa fa-phone"></i>
                         </div>
                         <div class="col-lg-3 col-md-1">
-                           <p id="telefono">098687154-7</p>
+                            <h6 id="telefono">098687154-7</h6>
                         </div>
                     </div>
                     <div class="row">
@@ -24,7 +23,7 @@
                             <i class="fa fa-phone"></i>
                         </div>
                         <div class="col-lg-3 col-md-1">
-                            <p id="telefono">098312577-5</p>
+                            <h6 id="telefono">098312577-5</h6>
                         </div>
                     </div>								
                 </div>
@@ -33,11 +32,10 @@
                 <div class="single-footer-widget">
                     <h6>Siguenos en Facebook</h6>
                     <div class="footer-social d-flex align-items-center">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/mojiconesdulcesabor/" target="_blank"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
             </div>						
         </div>
     </div>
 </footer>	
-<!-- End footer Area -->
