--- a/PaginaPrin/src/app/@components/navbar/navbar.component.html
+++ b/PaginaPrin/src/app/@components/navbar/navbar.component.html
@@ -1,51 +1,4 @@
-<!-- Funcinal 
-<header id="header" id="home">
-  <div class="header-top">
-        <div class="container">
-            <div class="row justify-content-end">
-                <div class="col-lg-8 col-sm-4 col-8 header-top-right no-padding">
-                    <ul>
-                        <li>
-                            Mon-Fri: 8am to 2pm
-                        </li>
-                        <li>
-                            Sat-Sun: 11am to 4pm
-                        </li>
-                        <li>
-                            <a href="tel:(012) 6985 236 7512">(012) 6985 236 7512</a>
-                        </li>				  					
-                    </ul>
-                </div>
-            </div>			  					
-        </div>
-  </div>	
-</header>		 
-
-  <div class="container">
-      <div class="row align-items-center justify-content-between d-flex">
-        <div id="logo">
-          <a href="index.html"><img src="assets/img/logo.png" alt="" title="" /></a>
-        </div>
-        <nav id="nav-menu-container">
-          <ul class="nav-menu">
-            <li class="menu-active"><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#coffee">Coffee</a></li>
-            <li><a href="#review">Review</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li class="menu-has-children"><a href="">Pages</a>
-              <ul>
-                <li><a href="generic.html">Generic</a></li>
-                <li><a href="elements.html">Elements</a></li>
-              </ul>
-            </li>
-          </ul>
-        </nav>		
-      </div>
-  </div> -->	
-
-  <!-- Navbar  -->
-  <nav class="navbar fixed-top navbar-expand-lg  navbar-dark p-md-3" style="height: 50px;">
+<nav class="navbar fixed-top navbar-expand-lg  navbar-dark p-md-3" style="height: 50px;">
     <div id="logo">
       <a href="index.html"><img src="assets/img/logo2.png" alt="Logo" title="" /></a>
     </div>
@@ -84,12 +37,9 @@
             <a class="nav-link text-white" href="#footer">Contactanos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="http://localhost:4100/login">Acceder</a>
+            <a class="nav-link text-white" href="http://localhost:4100/login" target="_blank">Acceder</a>
           </li>
         </ul>
       </div>
     </div>
-  </nav>
-  
-  
-  
+</nav> 
