Puntos de Venta

--- a/PaginaPrin/src/app/@components/product/product.component.html
+++ b/PaginaPrin/src/app/@components/product/product.component.html
@@ -10,12 +10,18 @@
         <div class="row" >
             <div class="col-lg-4" *ngFor="let pventa of pventas | paginate: { itemsPerPage: 6, currentPage: pageActual, totalItems: tamanTotal }">
                 <div class="single-menu">
-                    <div class="title-div justify-content-between d-flex">
+                    <div class="title-div justify-content-center d-flex">
                         <h4>{{pventa.nombrePventa}}</h4>
                     </div>
-                    <p>
-                        {{pventa.direccionPventa}}
-                    </p>								
+                    <div class="justify-content d-flex">
+                        <h4>Direccion:&nbsp;</h4>
+                        <p id="texto-pv">{{pventa.direccionPventa}}</p>
+                    </div>
+                    <br>
+                    <div class="justify-content d-flex">
+                        <h4>Ciudad:&nbsp;</h4>
+                        <p id="texto-pv">{{pventa.ciudadPventa}}</p>	
+                    </div>							
                 </div>
             </div>
             <div>
