--- a/PaginaPrin/src/app/@components/about/about.component.html
+++ b/PaginaPrin/src/app/@components/about/about.component.html
@@ -10,9 +10,9 @@
                 <h6>Una dulce tradición</h6><br>
                 <p class="text-justify" id="historia">
                     Fundada en 1985 por el Sr.José Ignacion Amboya padre del actual propietario, en el año 1995 se crea como microempresa, 
-                    contratando como trabajadores al Sr. Juan Amboya y Samuel Amboya. <br>
-                    En año 2010 el Sr. Abran Amboya trasfiere derechos del negocio al Sr. Samuel Amboya, en la actualidad cuentan con tres 
-                    productos: pan de sal, de dulce integral y los mojicones “Dulce Sabor”, que son distribuidos en diferentes supermercados en la ciudad de Riobamba. 
+                    contratando como trabajadores a los Srs. Abrahan Amboya y Juan Amboya. <br>
+                    En el año 2010 el Sr. Abrahan Amboya trasfiere derechos del negocio al Sr. Samuel Amboya. En la actualidad cuentan con tres 
+                    productos: pan de sal integral, pan de dulce integral y los mojicones “Dulce Sabor”, que son distribuidos en diferentes supermercados en la ciudad de Riobamba. 
                 </p> 
             </div>
         </div>
