Pagina Principal ProductosSAN v1

--- a/PaginaPrin/src/app/@components/navbar/navbar.component.html
+++ b/PaginaPrin/src/app/@components/navbar/navbar.component.html
@@ -37,7 +37,7 @@
             <a class="nav-link text-white" href="#footer">Contactanos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="https://back-productossan.herokuapp.com/login" target="_blank">Acceder</a>
+            <a class="nav-link text-white" href="https://productossan-manager.herokuapp.com/login" target="_blank">Acceder</a>
           </li>
         </ul>
       </div>
